--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
     "username": "root",
     "password": "root",
     "port": 3306,
-    "database": "pets",
+    "database": "pets_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
