tried changing config

--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": "root",
-    "port": 3306,
-    "database": "pets_db",
-    "host": "127.0.0.1",
+    "username": "yuumqw6oax05jprh",
+    "password": "fmtylknn5yso3erd",
+    "database": "ffh5hf8ry8s732qx",
+    "host": "y5s2h87f6ur56vae.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "test": {
