--- a/config/config.json
+++ b/config/config.json
@@ -15,7 +15,11 @@
     "dialect": "mysql"
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
+    "username": "t42nlbtahhjkargu",
+    "password": "w14edbmo1zb91a9z",
+    "database": "qpzjui5zgyr7ewbz",
+    "port": 3306,
+    "host": "lg7j30weuqckmw07.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
